# data-standardisation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  pyproject.toml
src/: ddb_standardise.py
src/include/: standardise.py
